--- a/style.css
+++ b/style.css
@@ -1,2 +1,21 @@
 html { box-sizing: border-box; }
 *, ::before, ::after { box-sizing: inherit; }
+
+/* hlavicka, 3 uvodni foto, 4 odkazove bloky, 3 last minute, novinky, paticka 
+mobil
+tablet
+pc */
+
+:root {
+     color: #F03000;}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h1 {
+    text-transform: uppercase;
+}
